--- a/privacy.html
+++ b/privacy.html
@@ -1,37 +1,124 @@
-Privacy Policy
-App: Happy Paw Journey
-Effective date: 2026-01-15
-Last updated: 2026-01-15
-Summary: Happy Paw Journey is a single-player casual puzzle game. We do not collect, store, or share personal data. The app has no account system, no ads, and no in-app purchases.
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Privacy Policy - Happy Paw Journey</title>
+  <meta name="description" content="Privacy Policy for Happy Paw Journey." />
+  <style>
+    :root { color-scheme: light dark; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    .wrap {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 28px 18px 60px;
+    }
+    h1 { font-size: 28px; margin-bottom: 8px; }
+    h2 { font-size: 18px; margin-top: 26px; }
+    p, li { font-size: 15px; }
+    ul { margin-left: 20px; }
+    .meta {
+      font-size: 13px;
+      opacity: 0.85;
+      margin-bottom: 18px;
+    }
+    .card {
+      border: 1px solid rgba(127,127,127,.35);
+      border-radius: 12px;
+      padding: 14px 16px;
+      margin: 14px 0;
+    }
+  </style>
+</head>
 
-1. Who we are
-This Privacy Policy explains how Happy Paw Journey ("the App") handles information. The App is provided by the developer ("we", "us").
+<body>
+<main class="wrap">
 
-2. Data we collect
-We do not collect personal information. The App does not request registration, and it does not collect data such as name, email, phone number, precise location, contacts, photos, or identifiers.
+  <h1>Privacy Policy</h1>
+  <div class="meta">
+    <div><strong>App:</strong> Happy Paw Journey</div>
+    <div><strong>Effective Date:</strong> 2026-01-14</div>
+    <div><strong>Last Updated:</strong> 2026-01-14</div>
+  </div>
 
-3. App functionality and local data
-The App may store game progress and settings locally on your device (for example, level progress). This data stays on your device and is not transmitted to us.
+  <div class="card">
+    <strong>Summary</strong>
+    <ul>
+      <li>Happy Paw Journey is a single-player casual puzzle game.</li>
+      <li>No account registration or login is required.</li>
+      <li>No personal data is collected, stored, or shared.</li>
+      <li>The app contains no advertisements.</li>
+      <li>The app contains no in-app purchases.</li>
+    </ul>
+  </div>
 
-4. Tracking
-No tracking. We do not track you across apps or websites, and we do not use Apple's advertising identifier (IDFA).
+  <h2>1. Who We Are</h2>
+  <p>
+    This Privacy Policy explains how Happy Paw Journey (“the App”) handles information.
+    The App is provided by the developer (“we”, “us”).
+  </p>
 
-5. Third-party services
-No third-party analytics or advertising SDKs. The App does not integrate third-party services that collect data from you for analytics, advertising, or marketing.
+  <h2>2. Data We Collect</h2>
+  <ul>
+    <li>We do not collect personal information.</li>
+    <li>No name, email address, phone number, or identifiers are collected.</li>
+    <li>No location, contacts, photos, or device identifiers are accessed.</li>
+  </ul>
 
-6. In-app purchases and ads
-None. The App contains no ads and no in-app purchases.
+  <h2>3. Local Data Storage</h2>
+  <ul>
+    <li>The app may store game progress and settings locally on your device.</li>
+    <li>All saved data remains on the device.</li>
+    <li>No local data is transmitted to any server.</li>
+  </ul>
 
-7. Children
-The App is not directed to children. We do not knowingly collect personal information from children. If you believe a child has provided personal information through the App (unexpectedly), please contact us so we can address the issue.
+  <h2>4. Tracking</h2>
+  <ul>
+    <li>The app does not track users across apps or websites.</li>
+    <li>The app does not use Apple’s advertising identifier (IDFA).</li>
+  </ul>
 
-8. Security
-Because we do not collect or transmit personal data, we do not store personal data on our servers. We recommend you keep your device and operating system up to date.
+  <h2>5. Third-Party Services</h2>
+  <ul>
+    <li>No third-party analytics SDKs are used.</li>
+    <li>No advertising SDKs are integrated.</li>
+    <li>No data is shared with third parties.</li>
+  </ul>
 
-9. Changes to this policy
-If we make changes, we will update the "Last updated" date above. Material changes will be reflected on this page.
+  <h2>6. Ads and In-App Purchases</h2>
+  <ul>
+    <li>The app does not display ads.</li>
+    <li>The app does not offer in-app purchases.</li>
+  </ul>
 
-10. Contact
-If you have questions about this Privacy Policy, you can contact us at:
+  <h2>7. Children</h2>
+  <ul>
+    <li>The app is not directed to children.</li>
+    <li>We do not knowingly collect personal data from children.</li>
+  </ul>
 
-Email: asifzahoor048@gmail.com
+  <h2>8. Security</h2>
+  <ul>
+    <li>We do not store personal data on servers.</li>
+    <li>Users are encouraged to keep their devices and operating systems up to date.</li>
+  </ul>
+
+  <h2>9. Changes to This Policy</h2>
+  <ul>
+    <li>This Privacy Policy may be updated from time to time.</li>
+    <li>The “Last Updated” date will reflect any changes.</li>
+  </ul>
+
+  <h2>10. Contact</h2>
+  <ul>
+    <li>Email: <a href="mailto:asifzahoor048@gmail.com">privacy@example.com</a></li>
+  </ul>
+
+</main>
+</body>
+</html>
