--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy - Happy Paw Journey</title>
+  <title>Privacy Policy - Eco Collector</title>
   <meta name="description" content="Privacy Policy for Happy Paw Journey." />
   <style>
     :root { color-scheme: light dark; }
@@ -41,7 +41,7 @@
 
   <h1>Privacy Policy</h1>
   <div class="meta">
-    <div><strong>App:</strong> Happy Paw Journey</div>
+    <div><strong>App:</strong> Eco Collector</div>
     <div><strong>Effective Date:</strong> 2026-01-14</div>
     <div><strong>Last Updated:</strong> 2026-01-14</div>
   </div>
@@ -49,7 +49,7 @@
   <div class="card">
     <strong>Summary</strong>
     <ul>
-      <li>Happy Paw Journey is a single-player casual puzzle game.</li>
+      <li>Eco Collector is a single-player casual puzzle game.</li>
       <li>No account registration or login is required.</li>
       <li>No personal data is collected, stored, or shared.</li>
       <li>The app contains no advertisements.</li>
@@ -59,7 +59,7 @@
 
   <h2>1. Who We Are</h2>
   <p>
-    This Privacy Policy explains how Happy Paw Journey (“the App”) handles information.
+    This Privacy Policy explains how Eco Collector (“the App”) handles information.
     The App is provided by the developer (“we”, “us”).
   </p>
 
