Update contact email in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -116,7 +116,7 @@
 
   <h2>10. Contact</h2>
   <ul>
-    <li>Email: <a href="mailto:asifzahoor048@gmail.com">privacy@example.com</a></li>
+    <li>Email: <a href="mailto:asifzahoor048@gmail.com">asifzahoor048@gmail.com</a></li>
   </ul>
 
 </main>
